--- a/style.css
+++ b/style.css
@@ -1,1 +1,106 @@
-/* Start coding here */
+html,body {
+    width: 100%;
+    min-height: 100vh; /* ให้เว็บเต็มหน้าจอเสมอ */
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #F6F6FB; /* กำหนดสีพื้นหลัง */
+    overflow-x: hidden; /* ป้องกันการเลื่อนแนวนอน */
+}
+    
+a {
+    text-decoration: none; /* ไม่ให้ข้อความลิงก์มีเส้นขีด */
+    color: inherit; /* ลิงก์ใช้สีเดียวกับข้อความ */
+}
+
+    .homepage-header {
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        font-family: sans-serif;
+        height: 70px;
+        max-width: 1200px;
+        width: 85%;
+        margin: 0 auto;
+        margin-top: 15px;
+        background-color: #FFFFFF;
+        padding: 0 7%;
+        border-radius: 40px;
+    }
+
+        .logo-icon {
+            width: 80px;
+        }
+
+        .homepage-nav {
+            display: flex;
+            gap: 40px;
+            font-size: 16px;
+        }
+
+        .hero-banner {
+            display: flex; 
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            max-width: 1200px;
+            width: 90%;
+            margin: 0 auto; 
+        }
+
+            .hero-banner h6 {
+                font-family: sans-serif;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 16px;
+                color: #5E44FF;   
+                background: rgba(86, 58, 255, 0.1);
+                border-radius: 999px;
+                padding: 15px;
+                margin-top: 100px;
+                margin-bottom: 0;
+            }
+
+            .hero-banner h1 {
+                font-family: sans-serif;
+                font-style: normal;
+                font-weight: 800;
+                font-size: 80px;
+                color: #1A1A2C;
+                margin-top: 40px;
+                margin-bottom: 0;
+            }
+
+                .product-text{
+                    color: #5E44FF;
+                }
+
+            .hero-banner h3 {
+                font-family: sans-serif;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 24px;
+                color: #1A1A2C;
+                margin-top: 20px;
+                margin-bottom: 40px;
+            }
+
+            .free-trial-button {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                font-family: sans-serif;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 16px;
+                color: #FFFFFF;
+                gap: 6px;
+                width: 187px;
+                height: 56px;
+                background: #1A1A2C;
+                border-radius: 35px;
+            }
