--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body{
     box-sizing: border-box;
     background-color: #F6F6FB; /* กำหนดสีพื้นหลัง */
     overflow-x: hidden; /* ป้องกันการเลื่อนแนวนอน */
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .inter {
     font-family: "inter", serif;
@@ -152,3 +157,88 @@ a {
                 background: #1A1A2C;
                 border-radius: 35px;
             }
+
+
+  .contact-section {
+    background-color: #fff;
+    padding: 30px;
+    max-width: 500px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contact-section h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333;
+  }
+
+  .contact-section form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .contact-section input,
+  .contact-section textarea {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+
+  .contact-section textarea {
+    resize: none;
+    height: 100px;
+  }
+
+  .contact-section button {
+    background-color: #000;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  .contact-section button:hover {
+    background-color: #333;
+  }
+
+  .footer {
+    margin-top: 24px;
+    font-size: 14px;
+    color: #666;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 90%;
+    margin-right: 50px;
+
+    
+  }
+
+   .acem {
+    color: #333; 
+    display: flex; 
+    justify-content: space-between;
+    align-content: center;
+  }
+
+
+  h1 {S
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+    
+    
+
+
+  
+
+  
+  
